--- a/css/Home_styles.css
+++ b/css/Home_styles.css
@@ -1,15 +1,16 @@
 @charset "UTF-8";
 
 p {
-    background-image: url("/testLogo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
-    color: lightpink;
+    color: #a5bda1;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
     width: 100%;
     display: inline-block;
     font-size: 38px;
+
+    /*A5BDA1*/
 }
