--- a/css/Layout.css
+++ b/css/Layout.css
@@ -5,6 +5,7 @@
 header div {
 	float: left;
 	align-self: center;
+	margin: 100px;
 }
 
 ul {
@@ -17,6 +18,7 @@ ul {
     display: flex;
     align-items: stretch;
 	list-style-type: none;
+	
 }
 
 li a {
@@ -25,10 +27,10 @@ li a {
 	margin: 0px;
 	float: left;
 	padding: 20px;
-	color: #ffffff;
+	color: #374335;
 	text-decoration: none;
+	margin-left: 50px;
 }
-
 
 
 a:hover {
@@ -39,14 +41,22 @@ html {
 	font-family: "Roboto";
 }
 
-footer {
-	text-align: center;
-	background: black;
-    color: lightpink;
-	padding-top: 50px;
-    padding-bottom: 50px;
+body {
+	background-color: #f3f0dd;
 }
 
-footer > a {
-	color: lightpink;
+
+
+footer {
+
+	text-align: center;
+	background: #a5bda1;
+    color: #f3f0dd;
+	padding-top: 50px;
+    padding-bottom: 50px;
+
+}
+
+footer > a{
+	color: #f3f0dd;
 }
